Fix styling issues, font size and alignements

--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -61,4 +61,5 @@ body {
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
+  font-size: 1.2rem;
 }
